--- a/config.yml
+++ b/config.yml
@@ -1092,7 +1092,6 @@ events:
             - '^h+e+w+o+$'
             - '^h+e+l+w+o+$'
             - '^yo+$'
-            - '^yo+u+$'
             - '^sup+$'
             - '^wassup+$'
             - '^good\s*afternoon+$'
@@ -1213,6 +1212,83 @@ events:
             - "💐 Hello {user}! We gathered the loveliest petals just to greet you!"
         messages:
           error: "❌ Error sending greeting!"
+
+      qotd:
+        enabled: true
+        guild_id: '1217588804328620163'
+        channel_id: '1410970032107688078'
+        interval_seconds: 60
+        message: 'Question of the day (test).'
+        message_template: 'QOTD: {question}'
+        questions:
+          sfw:
+            - 'What is a small daily habit that makes your day better?'
+            - 'What is your comfort movie or show and why?'
+            - 'If you could learn any skill instantly, what would it be?'
+            - 'What song have you had on repeat lately?'
+            - 'What is your favorite cozy food when it is cold outside?'
+            - 'What hobby do you wish more people knew about?'
+            - 'What is one thing you are grateful for this week?'
+            - 'What game world would you live in for a week?'
+            - 'What is the best advice you have ever received?'
+            - 'What would you put in a care package for a friend?'
+            - 'Favorite fursona species and why does it fit you?'
+            - 'Describe your fursona outfit or accessories you love most.'
+            - 'What was your first exposure to the furry community?'
+            - 'Which furry artist or writer inspires you right now?'
+            - 'What makes a furry convention feel special to you?'
+            - 'Favorite wholesome furry meme or comic?'
+            - 'If your fursona had a job, what would it be?'
+            - 'What animal sound instantly makes you smile?'
+            - 'If you could add one fantasy trait to your fursona (wings, bioluminescence, etc.), what would it be?'
+            - 'Non-furry: what is a cozy corner of the internet you enjoy?'
+            - 'What merch item would you design for your fursona or OC?'
+            - 'Favorite background setting for furry art (forest, city, space, neon)?'
+            - 'If your fursona ran a café, what would be its signature drink?'
+            - 'What con or meetup memory still makes you smile?'
+            - 'What badge or pin would you proudly wear on your lanyard?'
+            - 'If you could collab with any furry creator, who would it be?'
+            - 'What color palette screams “comfort” for you?'
+            - 'What soundtrack would play while your fursona explores a new world?'
+            - 'Which animal trait do you wish humans had (night vision, purr, tail, wings)?'
+            - 'Non-furry: what wholesome online community do you recommend?'
+            - 'Non-furry: favorite board or card game for a cozy night in?'
+            - 'Non-furry: what book or comic would you gift a friend?'
+          nsfw:
+            - 'What is your most chaotic late-night snack combo?'
+            - 'What song do you secretly dance to when nobody is watching?'
+            - 'What was the funniest typo you have ever sent in DMs?'
+            - 'If you could ban one cursed meme forever, what would it be?'
+            - 'What emoji do you overuse when chats get spicy?'
+            - 'What is the silliest reason you have stayed up past 3 AM?'
+            - 'What was your most unhinged gaming moment with friends?'
+            - 'What is your go-to “only in DMs” reaction?'
+            - 'What fandom hill will you jokingly die on?'
+            - 'What is your favorite guilty-pleasure soundtrack?'
+            - 'Furry: what tail or ear style do you find most irresistible?'
+            - 'Furry: soft paws or paw pads — which one wins and why?'
+            - 'Furry: what species gives you the biggest blush factor?'
+            - 'Furry: suits or art — what makes your heart race more?'
+            - 'Furry: favorite spicy soundtrack for a nighttime doodle session?'
+            - 'Furry/NSFW-adjacent: what trope do you secretly love in adult art/stories?'
+            - 'Non-furry: what playful kink-coded emoji do you drop too often?'
+            - 'Non-furry: what was your most “should not have sent that” autocorrect?'
+            - 'Non-furry: what late-night thought had you screaming into the pillow?'
+            - 'Non-furry: what fictional character ignited your first crush?'
+            - 'Furry: favorite spicy art theme (neon, cyber, fantasy, feral-turned-anthro)?'
+            - 'Furry: what is your top “blorbo” ship in the fandom?'
+            - 'Furry: what kink-coded accessory (collar, harness, cuffs) do you think looks best?'
+            - 'Furry: soft floof or sleek scales — what’s the bigger weakness?'
+            - 'Furry: favorite ear-twitch or tail-swish moment in art/animation?'
+            - 'Furry: which con after-dark event type do you enjoy most?'
+            - 'Furry: what scented candle would fit a late-night den vibe?'
+            - 'Non-furry: what lyric lives rent-free in your head after midnight?'
+            - 'Non-furry: what’s your funniest “caught vibing” moment on voice chat?'
+            - 'Non-furry: what playful dare have you actually followed through on?'
+        thread_name_template: 'QOTD {date}'
+        auto_archive_minutes: 1440
+        messages:
+          error: '❌ Error sending QOTD.'
 
     masteras-animation-empire:
       messageCreate:
