--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@vladfrangu/async_event_emitter": "2.4.8-1.0",
     "axios": "^1.13.2",
     "discord.js": "^14.25.1",
-    "dotenv": "^16.4.7",
-    "js-yaml": "^4.1.1"
+    "dotenv": "^17.2.3",
+    "js-yaml": "^4.1.1",
+    "@discordjs/voice": "^0.17.0",
+    "prism-media": "^1.3.5"
   },
   "devDependencies": {
     "eslint": "^9.39.2",
