--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "puro",
-  "version": "1.2.14",
+  "version": "1.2.15",
   "description": "Puro is a versatile and dynamic Discord bot designed to enhance your server experience. With a wide range of commands and seamless integration, Puro helps automate tasks and bring more fun and efficiency to your Discord community.",
   "main": "app.js",
   "scripts": {
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.17.0",
-    "@vladfrangu/async_event_emitter": "2.4.8-1.0",
+    "@discordjs/voice": "^0.19.0",
+    "@vladfrangu/async_event_emitter": "^2.4.7",
     "axios": "^1.13.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
@@ -21,7 +21,9 @@
     "prism-media": "^1.3.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11"
   },
