--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "lint:check": "eslint . --ext .js"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.10.0",
-    "@discordjs/voice": "^0.19.0",
     "@vladfrangu/async_event_emitter": "^2.4.7",
     "axios": "^1.13.4",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
-    "js-yaml": "^4.1.1",
-    "prism-media": "^1.3.5"
+    "js-yaml": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
